# adv_mla_lab_4

./: README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 36120_Lab4_Ex1-Solutions.ipynb  36120_Lab4_Ex2-Solutions.ipynb  36120_Lab4_Ex3_Solutions.ipynb
