[tool.poetry]
name = "adv-mla-lab-4"
version = "0.1.0"
description = ""
authors = ["reasmeytith <reasmey.tith@douugh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
pandas = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
